--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "karma-jasmine-html-reporter": "~2.0.0",
     "prettier": "2.8.0",
     "typescript": "~4.8.2"
+  },
+  "engines": {
+    "node": "16"
   }
 }
